--- a/resources/css/styleNewMain.css
+++ b/resources/css/styleNewMain.css
@@ -1,23 +1,11 @@
- * {
-	--black-text: #212121;
-	---orange: #FFCF33;
-	font-family: 'Inter';
-    font-style: normal;
-}
-body._lock {
-	overflow: hidden
-}
-
-
 /* ----------FONTS---------- */
-
-@import url('https://rsms.me/inter/inter.css');
+/* @import url('https://rsms.me/inter/inter.css');
 html { font-family: 'Inter', sans-serif; }
 @supports (font-variation-settings: normal) {
   html { font-family: 'Inter var', sans-serif; }
-}
+} */
 
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 @font-face {
   font-family: 'DrukTextWideCy-Bold-Desktop';
   src: url('./fonts/DrukTextWideCy-Bold-Desktop.otf') format('embedded-opentype'), /* Internet Explorer */
@@ -26,19 +14,32 @@ html { font-family: 'Inter', sans-serif; }
        url('./fonts/DrukTextWideCy-Bold-Desktop.otf') format('truetype'),          /* Safari, Android, iOS */
        url('./fonts/DrukTextWideCy-Bold-Desktop.otf') format('svg');               /* Legacy iOS */
 }
+ * {
+	--black-text: #212121;
+	---orange: #FFCF33;
+	--orange-hover: #FFC400;
+	--orange-active: #F0B400;
+	font-family: 'Inter', sans-serif;
+    font-style: normal;
+}
+body._lock {
+	overflow: hidden;
+}
+
 
 
 
 .main {
-	margin-top: 135px;
+	margin: 135px 0 0 0;
 }
 
 section {
 	display: grid;
 	grid-template-columns: repeat(12, [col-start] 1fr);
-	column-gap: 20px;
-	align-items: start;
-	margin: 0 4.4444%;
+	column-gap: 1.25rem;
+	margin: 0 4.4444% 2rem 4.4444%;
+	align-items: center;
+	align-content: center;
 }
 h1, h2, h3, h4 {
 	font-family: 'Druk Text Wide Cy';
@@ -68,6 +69,7 @@ h3 {
 	font-weight: 500;
 	font-size: 1.5rem;
 	line-height: 2rem;
+	margin-bottom: 1.125rem;
 }
 h4 {
 	font-weight: 700;
@@ -84,7 +86,14 @@ h5 {
 	color: #000000;
 }
 h6 {
-
+	font-family: 'Inter', sans-serif;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+	/* or 143% */
+	letter-spacing: -0.01em;
+	color: #000000;
 }
 
 p {
@@ -107,36 +116,90 @@ p.statistics-text {
 .section-first {
 	margin-bottom: 42px;
 }
+.section-first-in {
+	display: none;
+}
 .section-first-header {
 	margin-bottom: 2rem;
 	grid-column: col-start 1 / span 11;
 }
 .section-first-video {
 	position: relative;
-	border-radius: 32px;
+	border-radius: 2rem;
 	margin-bottom: 2rem;
 	grid-column: col-start 1 / span 12;
-	padding-bottom: 57%;
-	min-height: 187px;
-	min-width: 328px;
-	overflow: hidden;
+    overflow: hidden;
+    min-width: 187px;
+    max-width: 420px;
+    height: auto;
+    aspect-ratio: 16/9;
 }
-
 .section-first-video img{
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	object-position: center;
 	position: absolute;
+	cursor: pointer;
 }
-
-
 .section-first-video img.play-icon{
 	object-fit: none;
+	transition: all 0.3s ease-in-out;
 }
-
+img.play-icon:hover {
+	transform: scale(1.1);
+}
 .section-first-text {
 	grid-column: col-start 1 / span 12;
 }
+
+#pop-up-youtube {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,.7);
+	top: 0;
+	left: 0;
+	z-index: 100;
+}
+.pop-up-body {
+	min-height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 30px 10px;
+
+}
+.pop-up-content {
+	max-width: 960px;
+	max-height: auto;
+	margin: auto;
+    width: 100%;
+    opacity: 1;
+    position: relative;
+}
+.pop-up-close {
+
+}
+.pop-up-close-button {
+
+}
+.pop-up-video {
+	position: relative;
+    padding-bottom: 56.25%;
+    aspect-ratio: 16/9;
+    overflow: hidden;
+}
+.pop-up-video iframe{
+	position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+
+}
+
 
 
 /*.responsive-wrapper {
@@ -154,96 +217,69 @@ p.statistics-text {
 	height:100%;
 	position:absolute;
 }*/
-
-section.section-border-card {
+.grey-border-area {
+	background: #F7F8F7;
 	border-top-left-radius: 24px;
 	border-top-right-radius: 24px;
 	border: #ECECEC solid 1px;
 	border-bottom: none;
+}
+section.section-border-card {
 	margin: 0 0 24px 0;
 	padding: 34px 4.4444% 0 4.4444%;
 }
 .section-text {
 	grid-column: col-start 1 / span 12;
-
 }
 .section-more-flats p {
 	display: none;
 }
-
-
-/*.section-more-flats-images-card {
-	width: 100%;
-	height: auto;
-	max-height: fit-content;
-	align-items: center;
-	display: flex;
-	gap: 7px;
-  	overflow-x: auto;
-
+.section-more-flats h3 {
+	margin-bottom: 0;
 }
-.image-card {
-	max-width: 275px;
-	max-height: auto;
-}
-
-.image-card:nth-child(1), .image-card:nth-child(4) {
-	position: relative;
-	bottom: 42px;
-} 
-.image-card:nth-child(2), .image-card:nth-child(5) {
-	position: relative;
-	bottom: 14px;
-} 
-
-.image-card img {
-	max-width:100%;
-	max-height:100%;
-}*/
-
 .section-more-flats-images-card {
-	display: grid;
+ 	display: grid;
 	grid-gap: 7px;
 	grid-template-columns: repeat(5, 27%);
 	grid-template-rows: minmax(190px, auto);
+	justify-content: space-around;
 	overflow-x: auto;
 	margin-bottom: 34px;
 }
 .image-card {
 	position: relative;
-	padding-top: 31px;
+	/* padding-top: 31px; */
+	max-height: 448px;
+	max-width: 275px;
 }
 .image-card img {
 	width: 100%;
 	height: auto;
+
 	
 }
-.image-card:nth-child(1), .image-card:nth-child(4) {
-	position: relative;
-	bottom: 31px;
+.image-card:nth-child(3) {
+	/* position: relative;
+	bottom: 31px; */
+	margin-top: 31.9%;
 } 
 .image-card:nth-child(2), .image-card:nth-child(5) {
-	position: relative;
-	bottom: 14px;
+	margin-top: 14.41%;
+/* 	position: relative;
+	bottom: 14px; */
 } 
-
-
 ::-webkit-scrollbar {
 	display: none;
-}
-
-
-.section-statistics {
-	margin-bottom: 34px;
 }
 .section-statistics-image {
 	position: relative;
 	margin-bottom: 1.5rem;
 	grid-column: col-start 1 / span 12;
 	width: 100%;
-	height: auto;
-	padding-bottom: 57%;
+	max-width: 750px;
 	overflow: hidden;
+	height: auto;
+    aspect-ratio: 16/9;
 }
 
 .section-statistics-image img{
@@ -262,7 +298,9 @@ section.section-border-card {
 .section-statistics-text-individual {
 	border-bottom: 1px solid hsla(0, 0%, 93%, 1);
 }
-.smaller-statistics {
+h2.smaller-statistics  {
+	font-size: 3rem;
+	line-height: 112%;
 }
 .statistics-text {
 	margin-bottom: 12px;;
@@ -272,8 +310,10 @@ section.section-border-card {
 	grid-column: col-start 1 / span 12;
 	overflow: hidden;
 	margin-top: 18px;
+	z-index: 2;
+
 }
-div.section-more-clients-cards-individual {
+div.section-cards-individual {
 	border-radius: 24px;
 	width: 100%;
 	height: auto;
@@ -285,27 +325,24 @@ div.section-more-clients-cards-individual {
 	margin-bottom: 24px;
 }
 
-/* .section-more-clients-cards-individual img{
+.section-cards-individual img{
 	display: block;
-	width: 100%;
-	height: 100%;
 	object-fit: cover;
 	margin: auto;
 	position: absolute;
 	
-} */
+} 
 
-.section-more-clients-cards-individual:after {
+.section-cards-individual:after {
   content: '';
   position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
   min-width: 100%;
-  height: 66%;
-  background: linear-gradient(0deg, #181818 0%, rgba(25, 23, 29, 0.447294) 48.44%, rgba(24, 24, 24, 0) 100%);
-  opacity: 0.9;
-
+  height: 80%;
+  background: linear-gradient(0deg, #181818 0%, rgba(25, 23, 29, 0.447294) 50%, rgba(24, 24, 24, 0) 100%);
+  opacity: 1;
 }
 
 .caption{
@@ -319,44 +356,288 @@ div.section-more-clients-cards-individual {
 
 
 
-.card1 {
+/* .card1 {
 	background-image: url(/new-ingrad/resources/images/cards/card1.png);
 	background-size: cover;
-	background-position: top -7px left -38px;
 	background-repeat: no-repeat;
+	background-position: top 0 right 50%;
+
 }
 .card2 {
 	background-image: url(/new-ingrad/resources/images/cards/card2.png);
 	background-size: cover;
-	background-position: top -2px left -319px;
 	background-repeat: no-repeat;
+	background-position: top 0 right 50%;
 }
 .card3 {
 	background-image: url(/new-ingrad/resources/images/cards/card3.png);
 	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: bottom 50% right 50%;
+
+
 }
 .card4 {
 	background-image: url(/new-ingrad/resources/images/cards/card4.png);
 	background-size: cover;
-}
-/* 
+	background-repeat: no-repeat;
+	background-position: bottom 50% right 50%;
+} */
+
 .card1 img {
-	min-width: 947px;
-	min-height: 389px;
+	width: calc(100% + 38px); /* <------------- HERE */
+  	height: calc(100% + 7px);
 	object-position: top -7px left -38px;
 }
 .card2 img {
-	min-width: 1058px;
-	min-height: 387px;
+	width: calc(100% + 319px); /* <------------- HERE */
+  	height: calc(100% + 2px);
 	object-position: top -2px left -319px;
 }
 .card3 img {
-	min-width: 459px;
-	min-height: 330px;
+	width: calc(100% + 66px); /* <------------- HERE */
+  	height: calc(100% + 2px);
 	object-position: top -2px left -66px;
 }
 .card4 img {
+	width: calc(100% + 33px); /* <------------- HERE */
+  	height: calc(100% + 94px);
 	object-position: top -94px left -33px;
-	min-width: 386px;
-	min-height: 458px;
-}  */
+}  
+
+
+.section-g {
+	margin-bottom: 4rem;
+}
+.section-g-list {
+	grid-column: col-start 1 / span 12;
+	z-index: 2;
+}
+
+.section-g-list li {
+	display: flex;
+	flex-flow: row nowrap;
+	margin-bottom: 24px;
+}
+.section-g-list li:last-child {
+	margin-bottom: 0;
+}
+
+.list-text {
+	font-family: 'Druk Text Wide Cy';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+	color: #212121;
+}
+.list-check{
+	margin-right: 10px;
+}
+.g-background{
+	grid-column-end: 12;
+	max-width: 100vw;
+	position: absolute;
+	overflow: hidden;
+	height: auto;
+	padding-right: 4.4444%;
+	z-index: 0;
+}
+.g-background img {
+	width: 100%;
+	height: auto;
+}
+
+.section-center-image {
+	grid-column: col-start 1 / span 12;
+	z-index: 2;
+	margin-bottom: 34px;
+	position: relative;
+}
+.section-center-image img {
+	width: 100%;
+	height: auto;
+	object-fit: cover;
+}
+.section-center-text {
+	z-index: 2;
+}
+
+.section-questions {
+	padding-bottom: 58px;
+	margin-bottom: 0;
+}
+.section-cards-individual {
+	grid-column: col-start 1 / span 12;
+	overflow: hidden;
+	min-height: 328px;
+	width: auto;
+}
+.card-question {
+	background-color: var(--black-text);
+}
+.caption-question {
+    position: absolute;
+    left: 4.27%;
+	right: 31.1%;
+	top: 10.37%;
+	bottom: 67.68%;
+	z-index: 5;
+}
+.card-question p {
+	margin-top: 18px;
+	color: #FFFFFF;
+}
+.card-question a {
+	font: inherit;
+	color: var(---orange);
+}
+.card-question img {
+	width: calc(100% + 175px);
+  	height: 328px;
+	object-fit: contain;
+	object-position: top 0 left 175px;
+} 
+
+
+@media screen and (min-width: 730px) {
+	.card-question img {
+		object-position: top 0 right 0;
+		width: 100%;
+	} 
+
+	.section-more-flats p {
+	display: block;
+}
+	.section-more-flats h3 {
+		margin-bottom: 1.125rem;
+	}
+	section.section-more-flats {
+		margin-bottom: 44px;
+	}
+	.section-text,.section-text-header, .section-first-text  {
+		grid-column: col-start 1 / span 10;
+	}
+}
+
+@media screen and (min-width: 831px) {
+	.section-statistics-text-block, .section-center-text  {
+		grid-row: 1 /1;
+		grid-column: col-start 1 / span 4;
+	}
+	.section-statistics-image, .section-center-image {
+		grid-row: 1 /1;
+		grid-column: col-start 6 / span 7;
+		height: auto;
+	}
+}
+
+@media screen and (min-width: 1019px) {
+	.section-more-flats-images-card {
+		grid-template-columns: repeat(5, 275px);
+	}
+	.section-first-text {
+		grid-column: col-start 7 / span 6;
+	}
+	.section-first-video {
+		grid-column: col-start 1 / span 6;
+	}
+
+}
+
+
+
+@media screen and (min-width: 1081px) {
+
+	.caption-question h4 {
+		font-weight: 700;
+		font-size: 44px;
+		line-height: 54px;
+	}
+	.card-question {
+		min-height: 316px;
+		max-height: 316px;
+		width: auto;
+	}
+	p {
+		font-weight: 400;
+		font-size: 1.25rem;
+		line-height: 2rem;
+	}
+	h1 {
+		font-size: 5.5rem;
+		line-height: 6.125rem;
+	}
+	h1.subheading-main {
+		font-size: 4.25rem;
+		line-height: 4.75rem;
+	}
+	h2 {
+		font-size: 5.5rem;
+		line-height: 6.125rem;
+	}
+	h2.smaller-statistics{
+		font-size: 4.875rem;
+		line-height: 5.5rem;
+	}
+	h3 {
+		font-size: 2.75rem;
+		line-height: 3.375rem;
+	}
+	section {
+		margin-bottom: 74px;
+	}
+	.section-more-flats-images-card {
+		margin-bottom: 104px;
+	}
+	.list-text {
+		font-size: 1.5rem;
+		line-height: 2rem;
+	}
+	.section-g-list {
+		display: grid;
+		grid-template-areas: "list list"
+		"list list";
+		grid-column-gap: 130px;
+
+	}
+	.section-g-list li {
+		grid-area: "list";
+		display: flex;
+		flex-flow: row nowrap;
+		margin:0 0 104px 0;
+		max-width: 530px;
+	}
+
+}
+
+
+@media screen and (min-width: 1300px) {
+	.section-more-flats-images-card {
+		justify-content: flex-start;
+		margin-left: 4.4444%;
+		gap: 20px;
+}
+	.section-first-text {
+		grid-column: col-start 6/ 12;
+	}
+	.section-first-video {
+		grid-column: col-start 1 / span 4;
+	}
+	.section-first-in {
+		display: block;
+		grid-column: col-start 4 / span 9;
+		grid-row: 1 / 1;
+		margin: 0 -10% 74px 0;
+	}
+	.section-first-in img {
+		width: 100%;
+		height: 100%;
+		object-fit: contain;
+	}
+	.section-first-header {
+		grid-row: 1 / 1;
+		grid-column: col-start 1 / span 6;
+		z-index: 1;
+	}
+}
