--- a/resources/css/styleNewMain.css
+++ b/resources/css/styleNewMain.css
@@ -153,7 +153,7 @@ img.play-icon:hover {
 	grid-column: col-start 1 / span 12;
 }
 
-#pop-up-youtube {
+.pop-up-youtube {
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -161,6 +161,15 @@ img.play-icon:hover {
 	top: 0;
 	left: 0;
 	z-index: 100;
+	opacity: 0;
+	visibility: hidden;
+	overflow-x: hidden;
+	overflow-y: auto;
+	transition: all 0.3s ease-in 0s;
+}
+.pop-up-youtube.open {
+	opacity: 1;
+	visibility: visible;
 }
 .pop-up-body {
 	min-height: 100%;
@@ -179,10 +188,13 @@ img.play-icon:hover {
     position: relative;
 }
 .pop-up-close {
-
-}
-.pop-up-close-button {
-
+	width: 24px;
+	height: 24px;
+	position: absolute;
+	left: calc(50% - 24px);
+	top: -50px;
+	z-index: 100;
+	background: none;
 }
 .pop-up-video {
 	position: relative;
@@ -199,24 +211,6 @@ img.play-icon:hover {
     border: none;
 
 }
-
-
-
-/*.responsive-wrapper {
-	overflow:hidden;
-	padding-bottom:56.25%;
-	height:0;
-	position:relative;*
-}
-.responsive-wrapper iframe,
-.responsive-wrapper object,
-.responsive-wrapper embed {
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-	position:absolute;
-}*/
 .grey-border-area {
 	background: #F7F8F7;
 	border-top-left-radius: 24px;
