--- a/resources/css/resetNew.css
+++ b/resources/css/resetNew.css
@@ -29,8 +29,8 @@ a:active {
 html,
 body {
   height: 100%;
-  min-width: 100%;
-  margin: 0;
+  max-width: 2000px;
+  margin: 0 auto;
   font-size: 100%;
   font-size: 1rem;
   -ms-text-size-adjust: 100%;
