--- a/resources/css/styleHeader.css
+++ b/resources/css/styleHeader.css
@@ -3,9 +3,18 @@ header {
 	top: 0;
 	left: 0;
 	width: 100%;
+	max-width: 2000px;
 	background-color: white;
 	z-index: 10;
 	border-bottom: hsla(0, 0%, 0%, 0.1) solid 1px;
+}
+
+@media screen and (min-width: 2000px){
+	header {
+		position: fixed;
+	top: 0;
+	left: auto;
+	}
 }
 
 .header-container {
