--- a/resources/css/resetNew.css
+++ b/resources/css/resetNew.css
@@ -30,6 +30,7 @@ html,
 body {
   height: 100%;
   max-width: 2000px;
+  /* overflow-x: hidden; */
   margin: 0 auto;
   font-size: 100%;
   font-size: 1rem;
