--- a/resources/css/styleNewMain.css
+++ b/resources/css/styleNewMain.css
@@ -135,6 +135,8 @@ p.statistics-text {
 
 .section-first {
 	margin-bottom: 42px;
+	max-width: 2000px;
+	overflow: hidden;
 }
 .section-first-in {
 	display: none;
@@ -264,14 +266,12 @@ section.section-border-card {
 .image-card {
 	position: relative;
 	/* padding-top: 31px; */
-	max-height: 448px;
+	max-height: 500px;
 	max-width: 275px;
 }
 .image-card img {
 	width: 100%;
 	height: auto;
-
-	
 }
 .image-card:nth-child(3) {
 	/* position: relative;
@@ -421,12 +421,14 @@ div.section-cards-individual {
 }  
 
 
-.section-g {
+section.section-g {
 	margin-bottom: 4rem;
+	margin-left: 0;
 }
 .section-g-list {
 	grid-column: col-start 1 / span 12;
 	z-index: 2;
+	margin: 0 4.4444%;
 }
 
 .section-g-list li {
@@ -450,16 +452,16 @@ div.section-cards-individual {
 }
 .g-background{
 	grid-column-end: 12;
-	max-width: 100vw;
+	max-width: 100%;
 	position: absolute;
-	overflow: hidden;
+	padding-right: 4.55%;
 	height: auto;
-	padding-right: 4.4444%;
 	z-index: 0;
 }
 .g-background img {
 	width: 100%;
 	height: auto;
+	object-fit: cover;
 }
 
 .section-center-image {
